WorkSpaceC++ Learning/.metadata/.plugins/org.eclipse.cdt.ui/Multitreading.build.log
19:06:25 **** Incremental Build of configuration Debug for project Multitreading ****
make all 
Building file: ../mutex.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"mutex.d" -MT"mutex.d" -o "mutex.o" "../mutex.cpp"
../mutex.cpp:27:28: warning: missing terminating ' character [enabled by default]
 Modified question is - What's the difference between A mutex and a "binary" semaphore in "Linux"?
                            ^
../mutex.cpp:25:1: error: expected unqualified-id before ‘==’ token
 ===========================================================================================
 ^
make: *** [mutex.o] Error 1

19:06:25 Build Finished (took 68ms)

